# parsing_final_project

./: README.md  pyproject.toml
kp_spider_project/: docker-compose.yaml  scrapy.cfg
kp_spider_project/kp_spider_project/: items.py  middlewares.py  pipelines.py  settings.py
kp_spider_project/kp_spider_project/apis/: fastapi_service_news.py
kp_spider_project/kp_spider_project/spiders/: KpNewsSpider.py
