[project]
name = "parsing-final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "pymongo (>=4.11,<5.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "scrapy-playwright (>=0.0.42,<0.0.43)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
